# Coco-LIC

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: coco.rviz  ct_odometry_fastlivo.yaml  ct_odometry_lvisam.yaml  ct_odometry_r3live.yaml  ct_odometry_viral.yaml
config/fastlivo/: camera.yaml  imu.yaml
config/lvisam/: camera.yaml  imu.yaml  lidar.yaml
config/r3live/: camera.yaml  imu.yaml  lidar.yaml
config/viral/: camera.yaml  imu.yaml  lidar.yaml
gt/viral/: eee_01_gt.txt  eee_02_gt.txt  eee_03_gt.txt  nya_01_gt.txt  nya_02_gt.txt  nya_03_gt.txt  sbs_01_gt.txt  sbs_02_gt.txt  sbs_03_gt.txt  transform.json
launch/: odometry.launch
src/: odometry_node.cpp
src/camera/: r3live.hpp  r3live_lio.cpp  r3live_vio.cpp
src/camera/loam/: IMU_Processing.cpp  IMU_Processing.hpp
src/camera/loam/include/: common_lib.h  so3_math.h
src/camera/rgb_map/: image_frame.cpp  image_frame.hpp  pointcloud_rgbd.cpp  pointcloud_rgbd.hpp  rgbmap_tracker.cpp  rgbmap_tracker.hpp
src/camera/tools/: tools_ros.hpp
src/imu/: imu_initializer.cpp  imu_initializer.h  imu_state_estimator.cpp  imu_state_estimator.h
src/lidar/: lidar_feature.h  lidar_handler.cpp  lidar_handler.h  livox_feature_extraction.cpp  livox_feature_extraction.h  velodyne_feature_extraction.cpp  velodyne_feature_extraction.h
src/odom/: msg_manager.cpp  msg_manager.h  odometry_manager.cpp  odometry_manager.h  odometry_viewer.h  opt_param.h  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_estimator_options.h  trajectory_manager.cpp  trajectory_manager.h
src/odom/factor/: ceres_local_param.h
src/odom/factor/analytic_diff/: image_feature_factor.h  lidar_feature_factor.h  marginalization_factor.cpp  marginalization_factor.h  rd_spline_view.h  so3_spline_view.h  split_spline_view.h  trajectory_value_factor.h
src/spline/: ceres_spline_helper.h  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h  spline_segment.h  trajectory.cpp  trajectory.h
src/utils/: ceres_callbacks.h  cloud_tool.h  eigen_utils.hpp  log_utils.h  math_utils.h  mypcl_cloud_type.h  opt_weight.h  parameter_struct.cpp  parameter_struct.h  sophus_utils.hpp  tic_toc.h  yaml_utils.h
